--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# All map files
-*.map
-
-# Sass cache folder
-.sass-cache
-
 # Logs
 logs
 *.log
@@ -80,3 +74,6 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
+.sass-cache/
+*.map
