--- a/package.json
+++ b/package.json
@@ -4,11 +4,26 @@
   "description": "*My process of learning git*",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm-run-all test:*",
+    "test:html": "globstar nu-html-checker *.html",
+    "init-project": "npm install && npm-run-all init:*",
+    "init-dirs": "mkdir sass css vendor images js",
+    "init-files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
+    "build": "npm-run-all build:* test",
+    "build:clean": "rimraf css/",
+    "build:sass": "node-sass --output-style compact -o css sass",
+    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch": "npm-run-all build -p watch:*",
+    "watch:sassprefixer": "onchange -d 100 sass/*.scss -- npm-run-all sassprefixer:*",
+    "watch:browsersync": "browser-sync start --server --files css/*.css *.html",
+    "sassprefixer:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "sassprefixer:autoprefixer": "autoprefixer-cli css/style.css"  
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/krzysztofhejna/learning-git3.git"
+    "url": "https://github.com/krzysztofhejna/learning-git3.git"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +35,12 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
-    "nu-html-checker": "^0.1.0"
-  }
+    "globstar": "^1.0.0",
+    "node-sass": "^4.10.0",
+    "npm-run-all": "^4.1.3",
+    "nu-html-checker": "^0.1.0",
+    "onchange": "^5.1.0",
+    "rimraf": "^2.6.2"
+  },
+  "dependencies": {}
 }
