Fix task runner scripts

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
     "init-project": "npm install && npm-run-all init:*",
-    "init-dirs": "mkdir sass css vendor images js",
-    "init-files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:dirs": "mkdir sass css vendor images js",
+    "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "build": "npm-run-all build:* test",
     "build:clean": "rimraf css/",
